--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,7 @@
-## Architecture description.
+Architecture description.
 ------
 
-##### The server side of the file versioning application was developed with Ruby 2.1.3 and Rails 5. beta 1
+The server side of the file versioning application was developed with Ruby 2.2.3 and Rails 4.2.6
 
 Is based on an initial model containing three tables:
 
@@ -13,11 +13,11 @@ Is based on an initial model containing three tables:
 
 The current local storage used is mysql and it has an initial preview hosted storage heroku with PosgreSQL
 
-###Instructions to setup and run application.
+Instructions to setup and run application.
 ======
 * Clone the repository
 * Open the project folder
 * In console type `bundle install`
 * Configure  your database information in config/database.yml (user, password)
 * Then type `rails db:create` and `rails db:create`
-* Then Type `rails server` to go up the puma server
+* Then Type `rails server` to go up the WEBrick server
